[project]
name = "pushpushpush"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "influxdb3-python>=0.18.0",
    "isda-streaming>=1.2.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

# add "src" to the list of directories to search for packages
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
